Configure SMS service with 3 SMSC simulator instances
- Updated docker-compose.yml to run 3 SMSC simulator instances on ports 2775, 2776, 2777
- Removed RabbitMQ from sms-versand-service docker-compose (uses shared instance from befehlsnachricht-service)
- Added SMSC simulator build from GitHub project (melroselabs/smpp-smsc-simulator)
- Updated Dockerfile to expose port and add CMD
- Tested end-to-end: POST -> PostgreSQL -> RabbitMQ -> SMS via JSMPP with round-robin load balancing
- All 3 SMSC instances successfully bound and accepting SMS

--- a/sms-versand-service/docker-compose.yml
+++ b/sms-versand-service/docker-compose.yml
@@ -1,17 +1,20 @@
 version: '3.8'
 
 services:
-  rabbitmq:
-    image: rabbitmq:3-management-alpine
-    container_name: sms-rabbitmq
-    environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+  smsc-simulator-1:
+    image: smsc-simulator:latest
+    container_name: smsc-simulator-1
     ports:
-      - "5672:5672"
-      - "15672:15672"
-    volumes:
-      - rabbitmq-data:/var/lib/rabbitmq
+      - "2775:2775"
 
-volumes:
-  rabbitmq-data:
+  smsc-simulator-2:
+    image: smsc-simulator:latest
+    container_name: smsc-simulator-2
+    ports:
+      - "2776:2775"
+
+  smsc-simulator-3:
+    image: smsc-simulator:latest
+    container_name: smsc-simulator-3
+    ports:
+      - "2777:2775"
